# vid-merge-4k

./: .gitignore  PROMPT.md  ffmpeg_utils.py  main.py  pyproject.toml  test_export.py
PROMPTS/: PROMPT.md  PROMPT_2.md
static/: app.js  index.html  styles.css
